--- a/app/web/help.html
+++ b/app/web/help.html
@@ -92,15 +92,15 @@
 
     <div id="modal" class="hidden fixed top-0 left-0 w-full h-full bg-gray-800 bg-opacity-50 flex justify-center items-center">
         <div class="bg-white p-4 rounded-md shadow-sm">
-            <h2 class="text-gray-800 text-xl mb-2">Función en Desarrollo</h2>
-            <p class="text-gray-800 text-base mb-2">¡Gracias por tu paciencia! Estamos trabajando duro para mejorar tu experiencia con SsPassword. Aquí hay más detalles sobre lo que estamos desarrollando actualmente:</p> <!-- Modifiqué el tamaño del texto -->
+            <h2 class="text-gray-800 text-xl mb-2">Role in Development</h2>
+            <p class="text-gray-800 text-base mb-2">Thank you for your patience! We are working hard to improve your experience with SsPassword. Here are more details about what we are currently developing:</p>
             <ul class="text-gray-800 text-sm">
-                <li>Actualizaciones de seguridad para proteger mejor tus contraseñas.</li>
-                <li>Nuevas funciones para una gestión de contraseñas más eficiente.</li>
-                <li>Mejoras en la interfaz de usuario para hacer SsPassword más intuitivo.</li>
-                <li>Correcciones de errores y mejoras de rendimiento para una experiencia sin problemas.</li>
+                <li>Security updates to better protect your passwords.</li>
+                <li>New features for more efficient password management.</li>
+                <li>Improvements in the user interface to make SsPassword more intuitive.</li>
+                <li>Bug fixes and performance improvements for a smooth experience.</li>
             </ul>
-            <button onclick="closeModal()" class="mt-4 px-6 py-2 rounded-lg bg-gradient-to-r from-purple-700 to-indigo-700 text-white flex items-center justify-center space-x-2"> <!-- Botón con gradiente y colores oscuros -->
+            <button onclick="closeModal()" class="mt-4 px-6 py-2 rounded-lg bg-gradient-to-r from-purple-700 to-indigo-700 text-white flex items-center justify-center space-x-2">
                 <span>Cerrar</span>
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 0 1 1.414 0L10 8.586l4.293-4.293a1 1 0 1 1 1.414 1.414L11.414 10l4.293 4.293a1 1 0 0 1-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L8.586 10 4.293 5.707a1 1 0 0 1 0-1.414z" clip-rule="evenodd" />
